[gd_scene load_steps=8 format=3 uid="uid://b20bb6gjtf7xi"]

[ext_resource type="Script" uid="uid://j8f5jfg3l8sf" path="res://Scripts/UI/TeamSelect.gd" id="1_8a2kr"]
[ext_resource type="StyleBox" uid="uid://comkghpj0djcl" path="res://Resources/UI/Panel.tres" id="2_8a2kr"]
[ext_resource type="Texture2D" uid="uid://bgckb78kobtx3" path="res://Assets/Sprites/Players/Mario/LifeIcon.png" id="2_vptdn"]
[ext_resource type="Script" uid="uid://cbal8ms2oe1ik" path="res://Scripts/Classes/Components/ResourceSetterNew.gd" id="4_8a2kr"]
[ext_resource type="Script" uid="uid://ca3bew33g45eq" path="res://Scripts/Classes/UI/PackTextureRect.gd" id="4_qyg2i"]
[ext_resource type="Script" uid="uid://co6tjg3w6qpd8" path="res://Scripts/Parts/LabelFontChanger.gd" id="5_ypntl"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_k7cgt"]
color = Color(1, 1, 1, 1)

[node name="TeamSelect" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 152.0
offset_bottom = 48.0
focus_mode = 2
script = ExtResource("1_8a2kr")

[node name="RacePlayerTag" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 36.0
offset_bottom = 16.0

[node name="Label" type="Label" parent="RacePlayerTag"]
layout_mode = 2
size_flags_horizontal = 2
text = "P1"

[node name="Icon" type="TextureRect" parent="RacePlayerTag"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource("2_vptdn")
stretch_mode = 2
script = ExtResource("4_qyg2i")
metadata/_custom_type_script = "uid://ca3bew33g45eq"

[node name="ResourceSetterNew" type="Node" parent="RacePlayerTag/Icon" node_paths=PackedStringArray("node_to_affect")]
script = ExtResource("4_8a2kr")
node_to_affect = NodePath("..")
property_name = "texture"
mode = 1
metadata/_custom_type_script = "uid://cbal8ms2oe1ik"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_8a2kr")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "MENU_SELECT_TEAM"
horizontal_alignment = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer/Label"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/separator = SubResource("StyleBoxLine_k7cgt")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="RedTeam" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="RedLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/RedTeam"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.96862745, 0.22352941, 0.0627451, 1)
text = "RED"
horizontal_alignment = 1

[node name="VSeparator" type="VSeparator" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="BlueTeam" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="BlueLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/BlueTeam"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.25882354, 0.25882354, 1, 1)
text = "BLU"
horizontal_alignment = 1

[node name="LabelFontChanger" type="Node" parent="." node_paths=PackedStringArray("labels")]
script = ExtResource("5_ypntl")
labels = [NodePath("../PanelContainer/VBoxContainer/Label"), null, null, null, null, null]
metadata/_custom_type_script = "uid://co6tjg3w6qpd8"
